# RabbitHole

./: README.md  push.sh
AopSample/AsmTarget/: .gitignore  build.gradle  gradle.properties  settings.gradle
AopSample/AsmTarget/app/: build.gradle
AopSample/AsmTarget/app/src/main/: AndroidManifest.xml
AopSample/AsmTarget/gradle/wrapper/: gradle-wrapper.properties
AopSample/AsmTarget/track_util/src/main/: AndroidManifest.xml
AopSample/AsmTarget/view_click_jar_lib/src/main/: AndroidManifest.xml
AopSample/AsmTarget/view_click_module/: build.gradle
AopSample/AsmTarget/view_click_module/src/main/: AndroidManifest.xml
AopSample/AsmViewClick/: .gitignore  gradle.properties  settings.gradle
AopSample/AsmViewClick/gradle/wrapper/: gradle-wrapper.properties
AopSample/AsmViewClick/view_click/: build.gradle
android/inote/: .project  AndroidManifest.xml  project.properties
android/inote/res/layout/: activity_image_picker.xml  activity_login.xml  activity_personal_page.xml  activity_post.xml  dialog_comment.xml  home_list_view_item.xml  personal_page.xml  post_view.xml  test_multimages.xml  test_pull_to_refresh.xml  viewstub_imgbody.xml
android/inote/res/menu/: main.xml
android/inote/res/values/: colors.xml  dimens.xml
database/: inote.sql
ffmpeg/FFmpeg-Android-build-script/: README.md
ffmpeg/FFmpeg-Android-build-script/ffmpeg_3_1_3-with-ndk_r10e/: README.md  build_arm.sh  build_arm_static_lib.sh  configure
ffmpeg/FFmpeg-Android-build-script/ffmpeg_3_4_2-with-ndk_r14b/: README.md  build_arm.sh  build_arm_static_lib.sh  configure
ffmpeg/FFmpeg-Android-build-script/ffmpeg_4_0-with-ndk_r16b/: README.md  build_arm.sh  build_arm_static_lib.sh
ffmpeg/FFmpeg-Android-build-script/ffmpeg_4_1-with-ndk_r17c/: README.md  build_arm.sh  build_arm_static_lib.sh
ffmpeg/FFmpegAndroid/: README.md
ffmpeg/FFmpegAndroid/app/: CMakeLists.txt  build.gradle
ffmpeg/FFmpegAndroid/app/src/main/: AndroidManifest.xml
ffmpeg/FFmpegAndroid/app/src/main/cpp/avplayer/: AVpacket_queue.c  AVpacket_queue.h  FFmpegCore.c  FFmpegCore.h  OpenSL_ES_Core.c  OpenSL_ES_Core.h  audio_player.c  audio_player_audio_track.c  audio_player_audio_track.h  pepelu_log.h  video_player.c
ffmpeg/FFmpegAndroid/app/src/main/cpp/avplayercpp/: AudioDataProvider.cpp  AudioDataProvider.h  EventCallback.cpp  EventCallback.h  FrameQueue.cpp  FrameQueue.h  MediaPlayer.cpp  MediaPlayer.h  MediaPlayerJni.cpp  PacketQueue.cpp  PacketQueue.h  VideoDataProvider.cpp  VideoDataProvider.h  media_log.cpp  media_log.h  mp_common.h
ffmpeg/FFmpegAndroid/app/src/main/java/github/amorypepelu/ffmpeg/: MainActivity.kt  PlayAudioActivity.kt  PlayVideoActivity.kt
ffmpeg/FFmpegAndroid/app/src/main/java/github/amorypepelu/ffmpeg/avplayer/: AudioTrackHelper.java  NativePlayer.java
ffmpeg/FFmpegAndroid/app/src/main/java/github/amorypepelu/ffmpeg/config/: MediaPath.java
ffmpeg/FFmpegAndroid/app/src/main/java/github/amorypepelu/ffmpeg/mediaplayer/: MPEventCallback.java  PlayMediaActivity.kt
ffmpeg/FFmpegAndroid/app/src/main/res/layout/: activity_main.xml  audio_player_activity.xml  video_player_activity.xml
ffmpeg/FFmpegAndroid/app/src/main/res/values/: styles.xml
ffmpeg/FFmpegAndroid/build_so_script/ffmpeg/: build_arm.sh  build_arm_static_lib.sh  change_configure.txt
ffmpeg/FFmpegAndroid/build_so_script/ffmpeg_with_x264/: build_ffmpeg_with_x264_arm.sh
ffmpeg/FFmpegAndroid/build_so_script/x264/: build_x264_arm.sh  change_configure.txt
ffmpeg/FFmpegAndroid/gradle/wrapper/: gradle-wrapper.properties
iNote/android/inote/: .classpath  project.properties
iNote/android/inote/res/layout/: activity_imagepager.xml  activity_main.xml  activity_message_detail.xml  activity_register.xml  activity_root.xml  activity_test.xml  datas_is_null.xml  demo.xml  find_view.xml  find_view_listview_item.xml  grid_item.xml  home_view.xml  listview_footer.xml  mine_view.xml  post_girdview_item.xml  setting_view.xml  test_for_test.xml  test_list_view_item.xml  user_center_page.xml
iNote/web/inote/: .classpath  .project
iNote/web/inote/WebContent/: index.html
web/: server.xml
web/inote/WebContent/WEB-INF/: web.xml
(+132 files in other folders)
